--- a/assets/img/style.css
+++ b/assets/img/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body{
-  background: url("assets/bg-hero-desktop.svg");
+  background: url("assets/img/bg-hero-desktop.svg");
   background-size: cover;
   background-position: center;
 }
@@ -17,7 +17,7 @@ body{
 .wrapper{
   height: 22.5vw;
   width: 100%;
-  background: url('assets/bg2.jpg');
+  background: url('assets/img/bg2.jpg');
   background-size: 100%;
   background-position: center;
   z-index: 1;
